test/data/resolver/valid/inline_endpoint_source.cypher
MATCH (:Person)-[r:AUTHORED]->(post:Post) RETURN post, r
