test/data/resolver/invalid/ambiguous_unlabelled_binding.cypher
MATCH (x)-[:AUTHORED]->(p:Post) RETURN x
